TSG S8a dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
@@ -167,12 +167,24 @@
         [message]
             side=2
             canrecruit=no
-            message= _ "Tharzo! That meddler who killed the Urza brothers approaches from the south. His men and horses look worn out."
+            message= _ "Tharzo! That boy who killed the Urza brothers approaches from the south. His men and horses look worn out."
         [/message]
 
         [message]
             speaker="Tharzo Kalain"
-            message= _ "The dark gods have put revenge in our laps. Destroy them all before they reach the border fort!"
+            message= _ "The gods are gracious to have delivered this cretin into our lap. Kill them all before they reach the border fort!"
+        [/message]
+    [/event]
+
+    [event]
+        name=last breath
+        [filter]
+            id="Tharzo Kalain"
+        [/filter]
+
+        [message]
+            speaker="Tharzo Kalain"
+            message= _ "Nooo! My... revenge..."
         [/message]
     [/event]
 
@@ -213,22 +225,32 @@
 
                 [message]
                     speaker="Deoran"
-                    message= _ "It is I, Deoran, commander of the South Guard, and my men."
+                    message= _ "It is I, Deoran, commander of the South Guard."
                 [/message]
 
                 [message]
                     role=GarrisonCommander
-                    message= _ "Deoran? You had been thought lost long since. But I see by your men’s gear and drill that they are of the South Guard indeed. Pass."
+                    message= _ "Deoran? It truly is you? We had thought you had been lost to the undead."
                 [/message]
 
                 [message]
                     speaker="Deoran"
-                    message= _ "We, and our elvish allies, have won a great battle against a lich."
+                    message= _ "We and our elvish allies, have won a great battle against a lich. The undead are no more."
                 [/message]
 
                 [message]
                     role=GarrisonCommander
-                    message= _ "Elvish allies? I think you had best make haste to Westin. There are rumors of trouble with the elves of the Aethenwood."
+                    message= _ "This is wonderful news, commander! I shall spread word about your heroic deed! But... I am afraid there is another problem. There are rumors of trouble with the elves of the Aethenwood."
+                [/message]
+
+                [message]
+                    speaker="Ethiliel"
+                    message= _ "Is there now? Deoran, we had best hurry back to your city. I will need to see what the circumstances are."
+                [/message]
+
+                [message]
+                    speaker="Deoran"
+                    message= _ "Very well, let us make haste to Westin."
                 [/message]
             [/then]
         [/if]
