TSG story text revisions/extensions

--- a/data/campaigns/The_South_Guard/utils/sg_story.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_story.cfg
@@ -82,13 +82,13 @@
     [story]
         [part]
             background=story/fall.jpg
-            story= _ "After Mal M’Brin’s defeat, Deoran’s troops and their elvish allies turned north for home. As they re-crossed the Black River, fall was fading into winter."
+            story= _ "After Mal M’Brin’s defeat, Deoran and his men left the desolate caverns and returned to the surface of the fortress where the sun had begun to break through the thick fog in the ancient forest. Ethiliel stayed behind for a long while, not emerging from the caverns until the day had passed and it was well into the night. She offered a brief word of apology, but said nothing more as she led them back north toward Wesnoth. Deoran had to admit that he was elated that they had defeated the undead and were returning home, although the wearied, almost grieving mood of the elves was quite sombering."
             music=revelation.ogg
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "Forage and game were scarce in the gloomy woods. The men’s spirits were lifted by the thought of home, but their bodies became gaunt. The long weeks of trudging northward took its toll."
+            story= _ "The wheel of time turned another cycle and fall faded into winter. The last few colored leaves dropped to the ground, leaving nothing but the spiny evergreens and otherwise barren trees. Forage and game were scarce even with the undead gone, and the thoughts of both men and elves were turned toward their homes, where they could find peace and warmth with their families. The long weeks of trudging northward took its toll, but eventually, Deoran and his men emerged from the sprawling forest and returned to the lands of Wesnoth."
         [/part]
     [/story]
 #enddef
@@ -112,24 +112,28 @@
     [story]
         [part]
             background=story/winter.jpg
-            story= _ "Finally the sun broke the horizon and its rays breathed new life into the weary defenders of Westin. A great cry echoed through the valley as the men of the South Guard pressed their elven foes back from the walls. Suddenly the field was covered in a great fog..."
+            story= _ "The men of the South Guard held the walls of Westin staunchly, trading evenly with the elves blow for blow. The night ran its course, and as dawn broke, the fighting continued, humans standing fast at the wall as the elves poured out in ever increasing number. As the sun began to rise into the sky, the light dimmed and great fog spread across the battlefield. The sounds of fighting dispersed and soon, it was utterly silent as the elves withdrew from combat. The humans advanced cautiously, still in formation, still ready to strike at any sign of trouble."
             music=revelation.ogg
         [/part]
         [part]
             background=story/winter.jpg
-            story= _ "When the fog broke, Ethiliel stood alone, facing the wall of spears. Bathed in light, she spoke to the men of Wesnoth, saying, <i>“Stop! Enough blood has been spilled before the walls of this city! The injury you humans have done to the elves is great, but your service also was worthy.”</i>"
+            story= _ "The fog withdrew and sunlight broke through the clouds in scattered beams. Deoran rode to the forefront of the line of infantry, waiting with bated breath. Finally, after several more minutes, the fog drifted away and Ethiliel stood there alone, facing the wall of spears. Her face was a mask of woe and exhaustion, and yet her voice was startlingly clear as she spoke to the men of Wesnoth, saying, <i>“Stop! Enough blood has been spilled, human and elf alike. The injury you humans have done to the elves is great, but your service also was worthy. We have decided to make peace again.”</i>"
         [/part]
         [part]
             background=story/winter.jpg
-            story= _ "<i>“These are the terms of the peace between us: any man found in the forest or hills that belong to the elves will taste death. No more will the elves send ambassadors or councilors to Westin, and no more will men wander the green woods.”</i>"
+            story= _ "<i>“These are our terms: no human will be permitted in the forests or hills of the Aetherwood, and likewise, we elves will not traverse the plains and farmlands belonging to you humans. No more will the elves send ambassadors or councilors to Westin, and no more will men wander the green woods.”</i>"
         [/part]
         [part]
             background=story/winter.jpg
-            story= _ "Thus an uneasy peace was consummated between man and elf. For many weeks the South Guard patrolled the borders of the elven woods and watched over the growing farms and villages. Finally, as the snow melted and the roads bore their burdens again, a messenger came from King Haldric."
+            story= _ "Ethiliel drew closer to Deoran and her voice dropped to a whisper. <i>“I have done what I can to ensure peace between elf and man. You may not like it, but it is the best I could do. This whole endeavor has brought me enough grief as it is. I will go now.”</i>"
         [/part]
         [part]
             background=story/winter.jpg
-            story= _ "Sir Deoran, Knight of Wesnoth, was summoned to Weldyn for a council with King Haldric himself. Dark clouds were brewing throughout the realm, and every commander would be needed to weather the storm..."
+            story= _ "Thus, an uneasy peace was established between man and elf. For many weeks, the South Guard patrolled the borders of the elven woods and watched over the growing farms and villages. The threat from the elves was enough to keep the villagers from entering the now forbidding Aetherwood, and despite the palpable tension at the forest border, the truce was maintained without incident."
+        [/part]
+        [part]
+            background=story/winter.jpg
+            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journal northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
             music=traveling_minstrels.ogg
         [/part]
     [/story]
@@ -160,12 +164,17 @@
 
         [part]
             background=story/winter.jpg
-            story= _ "Deoran spent his days visiting the wounded and directing the men as they rebuilt the shattered walls and ramparts of the city. Slowly, a sence of normalcy began to return to Kerlath Province as Westin was restored and the South Guard began to patrol the villages once again. Finally, as the snow melted and green buds marked the onset of spring, a messenger came from King Haldric."
+            story= _ "Urza Afalas earned his own mound as well, a small, inconspicuous thing near his old home, where his brothers and he used to live before they were exiled for their crimes. Knowing that the former outlaw leader had helped defend the city against the undead assault, the council of Westin absolved the remaining bandits of their crimes and allowed them to return to their homes. After many years away from home and a difficult and terrifying battle against the undead, most were more than happy to come back in peace and help clean up the town."
         [/part]
 
         [part]
             background=story/winter.jpg
-            story= _ "Sir Deoran, knight of Wesnoth, was summoned to Weldyn to convene with King Haldric and several of his closest advisers. Dark clouds were brewing throughout the realm, and every commander would be needed to weather the storm..."
+            story= _ "Deoran spent his days visiting the wounded and directing the men as they rebuilt the shattered walls and ramparts of the city. Slowly, a sense of normalcy began to return to Kerlath Province as Westin was restored and the South Guard began to patrol the villages once again. "
+        [/part]
+
+        [part]
+            background=story/winter.jpg
+            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journal northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
             music=traveling_minstrels.ogg
         [/part]
     [/story]
