Updated Kwandulin's credits

--- a/data/campaigns/Under_the_Burning_Suns/_main.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/_main.cfg
@@ -65,7 +65,7 @@
             comment= "new Flesh Golem sprites"
         [/entry]
         [entry]
-            name = "David Limbrock (Kwandulin)"
+            name = "Kwandulin"
             comment = "New Kaleh and Nym sprites"
         [/entry]
         [entry]
