--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -602,8 +602,8 @@
         comment = "Icon overlays for the About dialog button"
     [/entry]
     [entry]
-        name = "David Limbrock (Kwandulin)"
-        comment = "Cloned Dwarvish Guardsman standing animation for the Dwarvish Sentinel and Stalwart, minor fixes"
+        name = "Kwandulin"
+        comment = "Standing animations (Skeleton Archer, Bone Shooter, Orcish Archer, Dwarvish Fighter, Ulfserker, Stalwart, Runesmith), minor fixes"
     [/entry]
     [entry]
         name = "doofus-01"
