Update codeblock and Vc project for 1.14 (#3604)
merge of pr #3604 by @newfrenchy83


This in particular fixes the appveyour build which was broken in f726a86ba5

--- a/projectfiles/CodeBlocks/campaignd.cbp
+++ b/projectfiles/CodeBlocks/campaignd.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="wesnothd" />
+		<Option title="campaignd" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Release">
-				<Option output="../../wesnothd" prefix_auto="1" extension_auto="1" />
+				<Option output="../../campaignd" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../../" />
 				<Option object_output=".objs-release" />
 				<Option type="1" />
@@ -17,7 +17,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Debug">
-				<Option output="../../wesnothd-debug" prefix_auto="1" extension_auto="1" />
+				<Option output="../../campaignd-debug" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../../" />
 				<Option object_output=".objs-debug" />
 				<Option type="1" />
@@ -64,11 +64,28 @@
 			<Add library="libboost_timer" />
 			<Add library="libboost_zlib" />
 			<Add library="libcrypto-1_1"/>
+			<Add library="winmm" />
+			<Add directory="./" />
 		</Linker>
-		<Unit filename="../../packaging/windows/wesnothd.rc">
+		<Unit filename="../../packaging/windows/campaignd.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
+		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../src/crypt_blowfish/crypt_blowfish.h" />
 		<Unit filename="../../src/about.hpp" />
+		<Unit filename="../../src/addon/validation.cpp" />
+		<Unit filename="../../src/addon/validation.hpp" />
+		<Unit filename="../../src/campaign_server/addon_utils.cpp" />
+		<Unit filename="../../src/campaign_server/addon_utils.hpp" />
+		<Unit filename="../../src/campaign_server/blacklist.cpp" />
+		<Unit filename="../../src/campaign_server/blacklist.hpp" />
+		<Unit filename="../../src/campaign_server/campaign_server.cpp" />
+		<Unit filename="../../src/campaign_server/campaign_server.hpp" />
+		<Unit filename="../../src/campaign_server/control.hpp" />
+		<Unit filename="../../src/campaign_server/fs_commit.cpp" />
+		<Unit filename="../../src/campaign_server/fs_commit.hpp" />
 		<Unit filename="../../src/color.cpp" />
 		<Unit filename="../../src/color.hpp" />
 		<Unit filename="../../src/color_range.cpp" />
@@ -85,9 +102,13 @@
 		<Unit filename="../../src/font/constants.hpp" />
 		<Unit filename="../../src/game_config.cpp" />
 		<Unit filename="../../src/game_config.hpp" />
+		<Unit filename="../../src/game_version.cpp" />
+		<Unit filename="../../src/game_version.hpp" />
 		<Unit filename="../../src/gettext.hpp" />
 		<Unit filename="../../src/gettext_boost.cpp" />
 		<Unit filename="../../src/global.hpp" />
+		<Unit filename="../../src/hash.cpp" />
+		<Unit filename="../../src/hash.hpp" />
 		<Unit filename="../../src/libc_error.hpp" />
 		<Unit filename="../../src/log.cpp" />
 		<Unit filename="../../src/log.hpp" />
@@ -113,25 +134,6 @@
 		<Unit filename="../../src/serialization/tokenizer.cpp" />
 		<Unit filename="../../src/serialization/unicode.cpp" />
 		<Unit filename="../../src/serialization/unicode.hpp" />
-		<Unit filename="../../src/server/ban.cpp" />
-		<Unit filename="../../src/server/ban.hpp" />
-		<Unit filename="../../src/server/forum_user_handler.cpp" />
-		<Unit filename="../../src/server/forum_user_handler.hpp" />
-		<Unit filename="../../src/server/game.cpp" />
-		<Unit filename="../../src/server/game.hpp" />
-		<Unit filename="../../src/server/metrics.cpp" />
-		<Unit filename="../../src/server/metrics.hpp" />
-		<Unit filename="../../src/server/player.cpp" />
-		<Unit filename="../../src/server/player.hpp" />
-		<Unit filename="../../src/server/player_connection.cpp" />
-		<Unit filename="../../src/server/player_connection.hpp" />
-		<Unit filename="../../src/server/player_network.cpp" />
-		<Unit filename="../../src/server/player_network.hpp" />
-		<Unit filename="../../src/server/room.hpp" />
-		<Unit filename="../../src/server/sample_user_handler.cpp" />
-		<Unit filename="../../src/server/sample_user_handler.hpp" />
-		<Unit filename="../../src/server/server.cpp" />
-		<Unit filename="../../src/server/server.hpp" />
 		<Unit filename="../../src/server/server_base.cpp" />
 		<Unit filename="../../src/server/server_base.hpp" />
 		<Unit filename="../../src/server/simple_wml.cpp" />
@@ -141,8 +143,6 @@
 		<Unit filename="../../src/tstring.cpp" />
 		<Unit filename="../../src/tstring.hpp" />
 		<Unit filename="../../src/util.hpp" />
-		<Unit filename="../../src/game_version.cpp" />
-		<Unit filename="../../src/game_version.hpp" />
 		<Unit filename="../../src/wesconfig.h" />
 		<Extensions>
 			<code_completion />
