--- a/data/core/units/elves/Captain.cfg
+++ b/data/core/units/elves/Captain.cfg
@@ -22,7 +22,7 @@
     advances_to=Elvish Marshal
     cost=32
     usage=fighter
-    description= _ "Elves, unlike many other races, will quickly acknowledge and follow any of their peers who have experience in combat. In this they differ greatly from humanity, for whom leadership is often a matter of coercion and intimidation. The combination of their willingness to accept the wisdom of their leaders, and the tendency to choose leaders of merit is one of the quiet strengths of the elves."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}
+    description= _ "Elvish captains usually lead patrols and command garrisons that stand guard over the vast forests in elvish territory. Unlike leaders from other races, they are mostly proficient at navigating small skirmishes rather than large-scale battles, and are especially skilled at defensive maneuvering. Captains typically command small units that remain together for extended periods of time, allowing them to personally mentor and befriend their troops. They are often observed to lead through camaraderie and amicability, but still command great respect from their kin."+{SPECIAL_NOTES}+{SPECIAL_NOTES_LEADERSHIP}
     die_sound={SOUND_LIST:ELF_HIT}
     {DEFENSE_ANIM_RANGE "units/elves-wood/captain-defend.png" "units/elves-wood/captain.png" {SOUND_LIST:ELF_HIT} melee}
     {DEFENSE_ANIM_RANGE "units/elves-wood/captain-bow-defend.png" "units/elves-wood/captain-bow.png" {SOUND_LIST:ELF_HIT} ranged }
