--- a/data/core/units/elves/Ranger.cfg
+++ b/data/core/units/elves/Ranger.cfg
@@ -16,7 +16,7 @@
     advances_to=Elvish Avenger
     cost=38
     usage=mixed fighter
-    description= _ "Though a man might spend years in the forest, he will never shake the feeling that he is a guest in a realm of which he is not truly a part. With elves, this is quite reversed. Any elf that studies the lore of the woods rapidly becomes a master of them. This, combined with a considerable skill at archery and swordsmanship, is very useful in warfare."+{SPECIAL_NOTES}+{SPECIAL_NOTES_AMBUSH}
+    description= _ "The silent watchers of the forests, rangers are masters of stealth and reconnaissance. Many are explorers and loners, preferring to travel alone along the paths between the towering trees and among the unspoiled natural beauty of their homes, of which they are fiercely protective. While they possess considerable skill in both blade and bow, rangers are a little less adept at fighting other warriors on even terms, preferring instead to ambush their enemies from the shadows in the woods. A surprise attack from rangers can cripple even a force many times their size, and attacking armies often choose to withdraw rather than risk a game of guerrilla warfare with rangers in the forests."+{SPECIAL_NOTES}+{SPECIAL_NOTES_AMBUSH}
     die_sound={SOUND_LIST:ELF_HIT}
     [movement_costs]
         shallow_water=2
