Elvish Marksman description update

--- a/data/core/units/elves/Marksman.cfg
+++ b/data/core/units/elves/Marksman.cfg
@@ -16,7 +16,7 @@
     advances_to=Elvish Sharpshooter
     cost=37
     usage=archer
-    description= _ "Elves are wondrously keen-sighted, a gift which contributes to their mastery of the bow. An elf practiced at archery can hit targets that a man couldn’t even see, and can nock a second arrow almost as soon as the first is let fly. Realizing this prodigious skill does come with one cost, that being a lack of practice with the sword."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MARKSMAN}
+    description= _ "Years of hunting in the deep forests combined with magically amplified senses makes the elves incredibly keen-sighted, a gift which contributes greatly to their mastery of the bow. An elf practiced at archery is capable of hitting any target, no matter how quickly it is moving or how far it is. Of course, training the body to keep up with the eyes is no easy feat, and realizing this prodigious skill does come with the cost of weakness in close quarters."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MARKSMAN}
     die_sound={SOUND_LIST:ELF_HIT}
     [death]
         start_time=0
