TSG S3: Added suggested dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -210,7 +210,7 @@
 
         [message]
             speaker=narrator
-            message= _ "Deoran and his men came to the eastern border of the Aethenwood, where the towering trees of the elfin forest loomed in the distance."
+            message= _ "Deoran and his men came to the eastern border of the Aethenwood, where the towering trees of the elven forest loomed in the distance."
             image=wesnoth-icon.png
         [/message]
 
@@ -221,12 +221,12 @@
 
         [message]
             speaker=Minister Hylas
-            message= _ "I must advise caution, Sir Deoran. No man has set foot in the elvish woods for many a year. They have never been friendly toward us men, and we do not know how they will receive us now."
+            message= _ "I must advise caution, Sir Deoran. No man has set foot in the elvish woods for many a year. They have never been friendly toward humankind, and we do not know how they will receive us now."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "We cannot fear and shun everything we do not understand! Sir Loris may have distrusted the elves, but he is gone now, and I daresay as a result of his own folly! We do not possess the strength to fight these undead, nor the means to discover their source, and so we can only look to these elves for help, wary of men though they may be."
+            message= _ "We cannot fear and shun everything we do not understand! Sir Loris may have distrusted the elves, but he is gone now, and I daresay as a result of his own folly! We do not possess the strength to fight these undead, nor the means to discover their source; we can only look to these elves for help, wary of men though they may be."
         [/message]
 
         [message]
@@ -453,7 +453,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "My answer will depend on your motives, young human. What would you do, knowing the secrets of the unholy ones?"
+            message= _ "My answer will depend on your motives, human. What would you do, knowing the secrets of the unholy ones?"
         [/message]
 
         [message]
@@ -463,7 +463,7 @@
 
         [message]
             speaker=Vardanos
-            message= _ "A fanciful delusion! A human untrained in the mystic arts stands no chance against the undead, especially not one so young!"
+            message= _ "A fanciful delusion! A human untrained in the mystic arts stands no chance against the undead!"
         [/message]
 
         [message]
@@ -473,12 +473,12 @@
 
         [message]
             speaker=Eltenmir
-            message= _ "In battles against other <i>humans</i>, young commander! To fight such a profane evil is another matter altogether."
+            message= _ "Only in battles against <i>other humans!</i> To fight such a fell evil is another matter altogether."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "But surely I cannot simply do nothing either!"
+            message= _ "But surely I cannot do nothing either!"
         [/message]
 
         [message]
@@ -498,7 +498,7 @@
 
         [message]
             speaker=Sidaurios
-            message= _ "Ethiliel, surely you are not-"
+            message= _ "Ethiliel, surely you are not—"
         [/message]
 
         [message]
@@ -514,7 +514,7 @@
         [message]
             speaker=Deoran
             image=portraits/deoran-glad.png
-            message= _ "Many thanks for your aid, my lady."
+            message= _ "I welcome your aid, my lady."
         [/message]
 
         [endlevel]
