--- a/data/core/units/elves/Sharpshooter.cfg
+++ b/data/core/units/elves/Sharpshooter.cfg
@@ -17,7 +17,7 @@
     {AMLA_DEFAULT}
     cost=51
     usage=archer
-    description= _ "There was a legend of an elf who stopped an arrow by shooting it out of the air with one of his own. It is a testament to the skill of the elves that such a story could be taken seriously. The sharpshooters of the elves have, quite simply, mastered the art of archery."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MARKSMAN}
+    description= _ "Though not a formal title, 'Sharpshooter' is often the epithet given to those marksmen who have mastered the art of archery. Even by elvish standards, sharpshooters are capable of incredible and sometimes miraculous feats with the bow; they are precise enough to shoot arrows into tiny gaps in armor, even on rapidly moving targets such as knights on horseback or goblins riding their wolves. Some of these elves have been seen to shoot enemy projectiles straight out of the sky with their own arrows, while others can even shoot multiple arrows simultaneously while maintaining enough power to pierce through steel armor. A sharpshooter on the battlefield is always a great threat and can wreak havoc on adversaries when left unchecked."+{SPECIAL_NOTES}+{SPECIAL_NOTES_MARKSMAN}
     die_sound={SOUND_LIST:ELF_HIT}
     [attack]
         name=sword
