--- a/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
@@ -322,7 +322,7 @@
             side=1
             [objective]
                 condition=win
-                description= _ "Move through the passageway in the northwest leading to the great hall"
+                description= _ "Move Malin Keshar or Darken Volk through the passageway in the northwest leading to the great hall"
             [/objective]
             [objective]
                 condition=lose
