TSG S4: Fixed wording and grammar

--- a/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
@@ -242,7 +242,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "Perhaps they are allied with the bandits who have been sacking Westin. However, they have grown quite bold if they are attacking the elves!"
+            message= _ "Perhaps they are allied with the bandits who have been sacking Westin. They have grown quite bold if they are attacking the elves!"
         [/message]
 
         [message]
@@ -266,13 +266,13 @@
         [/message]
 
         [message]
-            speaker="Mal A'kai"
-            message= _ "Ha, you blabbering buffoons! Even should you defeat us here, it will not matter! We’ve already taken what we wanted from this valley."
+            speaker=Jera Ilras
+            message= _ "Ha, you blabbering buffoons! Even should you defeat us here, it does not matter! We’ve already taken what we wanted from this valley."
         [/message]
 
         [message]
-            speaker=Jera Ilras
-            message= _ "Cry, filthy flesh bags, and know that your tears will become the blood that stains the earth and feeds our powers!"
+            speaker="Mal A'kai"
+            message= _ "Weep, filthy flesh bags, weep and know that your tears will become the blood that stains the trees and feeds our powers!"
         [/message]
 
         [objectives]
@@ -383,7 +383,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "For now, I can slow them down. But, where are the elves who used to live in this valley? They should come to our aid!"
+            message= _ "For now, I can slow them down. But where are the elves who used to live in this valley? They should have come to our aid by now."
         [/message]
 
         [message]
